<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PollstartActivity">



    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_title" />

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="clip_vertical"
    android:padding="@dimen/treespace"
    android:layout_margin="@dimen/treespace"
    >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_question1"
        android:textAlignment="textStart"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="100dp">


        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/treespace"
            android:text="@string/rb1_question1" />


        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/treespace"
            android:text="@string/rb2_question1" />


        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/treespace"
            android:text="@string/rb3_question1" />




    </RadioGroup>


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_question2"
            android:textAlignment="textStart"/>


        <RadioGroup
            android:id="@+id/radioGroup2"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/twospace"
            android:layout_height="50dp">


            <RadioButton
                android:id="@+id/radioButton6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/onespace"
                android:text="@string/rb1_question2" />


            <RadioButton
                android:id="@+id/radioButton7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/treespace"
                android:text="@string/rb2_question2" />


        </RadioGroup>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_question3"
            android:textAlignment="textStart"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="82dp"
            android:inputType="textMultiLine"
            android:textAlignment="viewStart"
            android:textSize="14sp" />




    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="bottom"
        android:layout_marginLeft="220dp"
        >


        <Button
            android:id="@+id/btn_enviar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="ENVIAR"
            android:textColor="@color/btn_text"
            android:background="@color/btn_color"
            android:onClick="onClick" />

    </LinearLayout>





</android.support.constraint.ConstraintLayout>